# tinyml

./: CMakeLists.txt  README.md  library.cpp  library.h
examples/ex_mlp/: ex_loader.hpp  ex_mlp.cpp
examples/mnist/: mnist.cpp
examples/mnist_mlp/: main.cpp  mnist_loader.hpp
examples/xor_mlp/: main.cpp  xor_loader.hpp
include/tinyml/codegen/: codegen.hpp  dense_gen.hpp  model_gen.hpp  relu_gen.hpp
include/tinyml/core/: buffer_view.hpp  config.hpp  shape.hpp
include/tinyml/dataset/: batch.hpp  dataset.hpp  loader.hpp
include/tinyml/internal/: aligned_buffer.hpp
include/tinyml/model/: dense.hpp  layer.hpp  relu.hpp  sequential.hpp  tanh.hpp
include/tinyml/quant/: qdense.hpp  qlayer.hpp  qparam.hpp  qrelu.hpp  qsequential.hpp  qtanh.hpp  qtest.hpp
include/tinyml/runtime/files/: arena.h  model.c  model.h  model_config.c  model_config.h  model_data.h
include/tinyml/runtime/temp/: arena.h  main.c  model.c  model.h  model_config.c  model_config.h  model_data.c  model_data.h
include/tinyml/runtime/templates/: model_data.c
include/tinyml/tensor/: tensor.hpp  tensor_view.hpp
include/tinyml/train/: ce_loss.hpp  context.hpp  fit.hpp  loss.hpp  optimizer.hpp
src/codegen/: codegen.cpp  dense_gen.cpp  model_gen.cpp  relu_gen.cpp
src/dataset/: dataset.cpp
src/internal/: aligned_buffer.cpp
src/model/: dense.cpp  relu.cpp  sequential.cpp  tanh.cpp
src/quant/: qdense.cpp  qrelu.cpp  qsequential.cpp  qtanh.cpp  qtest.cpp
src/train/: ce_loss.cpp  context.cpp  fit.cpp  optimizer.cpp
tests/: CMakeLists.txt
tests/core/: buffer_view_test.cpp  shape_test.cpp
tests/internal/: aligned_buffer_test.cpp
tests/model/: dense_test.cpp  relu_test.cpp  sequential_test.cpp
tests/tensor/: tensor_test.cpp  view_test.cpp
tests/train/: context_tests.cpp  fit_tests.cpp
